--- a/.github/workflows/list-var.yaml
+++ b/.github/workflows/list-var.yaml
@@ -9,7 +9,7 @@ env:
     ^LICENSE
     ^.github/workflows
 jobs:
-  production-deploy-needed:
+  deployment-needed:
     runs-on: ubuntu-latest
     outputs:
       deploy_needed: ${{ steps.check.outputs.deploy_needed }}
@@ -23,8 +23,8 @@ jobs:
         run: bash scripts/prod-deploy-check.sh
   production-deploy:
     needs:
-      - production-deploy-needed
-    if: needs.production-deploy-needed.outputs.deploy_needed == 'true'
+      - deployment-needed
+    if: needs.deployment-needed.outputs.deploy_needed == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
