--- a/.github/workflows/list-var.yaml
+++ b/.github/workflows/list-var.yaml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
+    tags:
+      - '*'
   workflow_dispatch:
 env:
   DEPLOYMENT_PATHS: |
