--- a/.github/workflows/list-var.yaml
+++ b/.github/workflows/list-var.yaml
@@ -3,9 +3,9 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
     tags:
       - '*'
   workflow_dispatch:
