--- a/.github/workflows/create-pr.yaml
+++ b/.github/workflows/create-pr.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: create pull request
         uses: peter-evans/create-pull-request@v7
         with:
-          # token: ${{ secrets.PR_TOKEN }}
+          token: ${{ secrets.PR_TOKEN }}
           # committer: 'Nerijus K. <14043736+nerijusk@users.noreply.github.com>'
           # author: 'Nerijus K. <14043736+nerijusk@users.noreply.github.com>'
           body: This is a new pull request
