--- a/.github/workflows/create-pr.yaml
+++ b/.github/workflows/create-pr.yaml
@@ -35,5 +35,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr checks ${{ steps.create-pr.outputs.pull_request_number }} --required --watch --interval 15
-          gh pr merge ${{ steps.create-pr.outputs.pull_request_number }} --admin --delete-branch --squash
+          gh pr checks ${{ steps.create-pr.outputs.pull-request-number }} --required --watch --interval 15
+          gh pr merge ${{ steps.create-pr.outputs.pull-request-number }} --admin --delete-branch --squash
