chore(core): use non-default token as author does not work

--- a/.github/workflows/create-pr.yaml
+++ b/.github/workflows/create-pr.yaml
@@ -22,9 +22,7 @@ jobs:
         id: create-pr
         uses: peter-evans/create-pull-request@v7
         with:
-          # token: ${{ secrets.PR_TOKEN }}
-          author: 'Nerijus K. <14043736+nerijusk@users.noreply.github.com>'
-          committer: 'Nerijus K. <14043736+nerijusk@users.noreply.github.com>'
+          token: ${{ secrets.PR_TOKEN }}
           body: This is a new pull request
           base: main
           branch: pr-create-test
