--- a/.github/workflows/remote-workflow.yaml
+++ b/.github/workflows/remote-workflow.yaml
@@ -7,6 +7,9 @@ on:
         description: Log level
         required: false
         type: string
+  push:
+    branches:
+      - main
 
 jobs:
   build:
