chore: test with no input provided

--- a/.github/workflows/remote-workflow.yaml
+++ b/.github/workflows/remote-workflow.yaml
@@ -17,3 +17,7 @@ jobs:
     with:
       logLevel: ${{ inputs.logLevel }}
       some_number: 1
+  build2:
+    uses: nerijusk/gh-template-test/.github/workflows/remote-workflow-1.yaml@main
+    with:
+      some_number: 2
