--- a/.github/workflows/remote-workflow.yaml
+++ b/.github/workflows/remote-workflow.yaml
@@ -7,6 +7,11 @@ on:
         description: Log level
         required: false
         type: string
+      someBool:
+        description: Some boolean
+        required: true
+        default: true
+        type: boolean
   push:
     branches:
       - main
@@ -21,3 +26,12 @@ jobs:
     uses: nerijusk/gh-template-test/.github/workflows/remote-workflow-1.yaml@main
     with:
       some_number: 2
+  build3:
+    runs-on: ubuntu-latest
+    steps:
+      - name: bool test 1
+        if: ${{ inputs.someBool }}
+        run: echo "Hello, World!"
+      - name: bool test 2
+        if: ${{ !inputs.someBool }}
+        run: echo "Hello, World!"
