chore: list env

--- a/.github/workflows/remote-workflow.yaml
+++ b/.github/workflows/remote-workflow.yaml
@@ -35,3 +35,5 @@ jobs:
       - name: bool test 2
         if: ${{ !inputs.someBool }}
         run: echo "Hello, World!"
+      - name: list env
+        run: env | sort
