chore: unify job names

--- a/.github/workflows/remote-workflow.yaml
+++ b/.github/workflows/remote-workflow.yaml
@@ -17,7 +17,7 @@ on:
       - main
 
 jobs:
-  build:
+  build1:
     uses: nerijusk/gh-template-test/.github/workflows/remote-workflow-1.yaml@main
     with:
       logLevel: ${{ inputs.logLevel }}
